<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">



    <ImageView
        android:id="@+id/guitar"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:onClick="guitar"
        android:contentDescription="@string/category_guitar_comprehension"
        app:layout_constraintEnd_toStartOf="@+id/bath"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/guitar" />

    <ImageView
        android:id="@+id/pick"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:onClick="pick"
        android:contentDescription="@string/category_guitar_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toEndOf="@+id/bath"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pick" />

    <ImageView
        android:id="@+id/bath"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:onClick="bath"
        android:contentDescription="@string/category_guitar_maintenance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bath" />

    <ImageView
        android:id="@+id/djembe"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:onClick="djembe"
        android:contentDescription="@string/category_djembe"
        app:layout_constraintEnd_toStartOf="@+id/calendar"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guitar"
        app:srcCompat="@drawable/djembe" />

    <ImageView
        android:id="@+id/calendar"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:onClick="calendar"
        android:contentDescription="@string/category_calendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bath"
        app:srcCompat="@android:drawable/ic_menu_my_calendar" />

    <ImageView
        android:id="@+id/inform"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:onClick="inform"
        android:contentDescription="@string/category_inform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toEndOf="@+id/calendar"
        app:layout_constraintTop_toBottomOf="@+id/bath"
        app:srcCompat="@android:drawable/ic_menu_info_details" />

    <TextView
        android:id="@+id/textbath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/category_guitar_maintenance"
        app:layout_constraintBottom_toTopOf="@+id/calendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bath" />

    <TextView
        android:id="@+id/textguitar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/category_guitar_comprehension"
        app:layout_constraintBottom_toTopOf="@+id/djembe"
        app:layout_constraintEnd_toStartOf="@+id/textbath"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guitar" />

    <TextView
        android:id="@+id/textstyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/category_guitar_style"
        app:layout_constraintBottom_toTopOf="@+id/inform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toEndOf="@+id/textbath"
        app:layout_constraintTop_toBottomOf="@+id/bath" />

    <TextView
        android:id="@+id/textdjembe"
        android:layout_width="70dp"
        android:layout_height="18dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/category_djembe"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/textCalendar"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/djembe" />

    <TextView
        android:id="@+id/textCalendar"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/category_calendar"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendar" />

    <TextView
        android:id="@+id/textInform"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/category_inform"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textCalendar"
        app:layout_constraintTop_toBottomOf="@+id/inform" />

    <WebView
        android:id="@+id/webView"
        android:layout_height="0dp"
        android:layout_width="0dp"
        />


</android.support.constraint.ConstraintLayout>